--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,11 @@
-*.doc diff=doc
-*.xls diff=xls
-*.ppt diff=ppt
+# Documents
+*.doc  diff=astextplain
+*.DOC  diff=astextplain
+*.docx diff=astextplain
+*.DOCX diff=astextplain
+*.dot  diff=astextplain
+*.DOT  diff=astextplain
+*.pdf  diff=astextplain
+*.PDF  diff=astextplain
+*.rtf  diff=astextplain
+*.RTF  diff=astextplain
