--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,7 @@
 * text=auto
 
 # Documents
-Inner Classes.odt  diff=astextplain
+Inner Classes.odt  diff=text
 *.DOC  diff=astextplain
 *.docx diff=astextplain
 *.DOCX diff=astextplain
